# flowboard

./: .gitignore  LICENCE  README.md  package-lock.json  package.json
.github/workflows/: CI.yml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  board.rs  main.rs  utils.rs
src-tauri/src/node/: directory.rs  mod.rs
src-tauri/src/node/note/: mod.rs
src-tauri/src/node/project/: mod.rs  task.rs
src-tauri/src/project/: mod.rs
src/components/: AddProject.vue  ContentView.vue  TreeItem.vue  TreeView.vue
src/components/content/: ContentView.vue  NoteView.vue
src/directives/: click-outside.ts  focus.ts  index.ts
